# Genomic-Toolkit

./: .gitignore  README.md  pyproject.toml  results.txt
data/: cli.py  sequence.fasta
src/: cli.py  fasta_analysis.py
src/genomic_toolkit/: cli.py  sequence_translation.py
